--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -18,6 +18,7 @@
           </li>
         </ul>
       </div>
+      <app-product-tracklisting></app-product-tracklisting>
     </div>
   </div>
 </main>
